# PyForFluids

./: .gitignore  .header-template  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  Presentación.ipynb  README.md  apt.txt  concentrations  gerg.f90  gerg.f95  modules.f90  parameters.f90  pyproject.toml  requirements.txt  requirements_dev.txt  run_gerg  setup.py  thermoprops.f95  tox.ini  toxi.ini
.github/workflow/: ci.yml
.github/workflows/: CI.yml  ci.yml  ci_linux.yml  ci_windows.yml  release.yml
.ipynb_checkpoints/: Presentación-checkpoint.ipynb
GERG_test/binary/: check.py  test_data
Z_test/: compare  compare.py  concentrations  gergdata  tmp_conc
data/: critical  params  params.json
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  modules.rst  pyforfluids.equilibrium.rst  pyforfluids.fortran.rst  pyforfluids.models.rst  pyforfluids.rst  tutorial.ipynb
parameters/: compounds  critical  reducing_params
parameters/departure/: Fij  Kpolij-Kexpij  betaij  dij  etaij  gammij  nij  tij
parameters/ideal/: clean  n  v
parameters/residual/: Kpol-Kexp  c  clean  d  n  t
pyforfluids/: __init__.py  constants.py  core.py
pyforfluids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyforfluids/autodiff/: __init__.py  autodiff.py
pyforfluids/equilibrium/: __init__.py  flash.py
pyforfluids/fortran/: __init__.py  gerg.f95  parameters.f95  thermoprops.f90  thermoprops.f95
pyforfluids/fortran/cubic/: MulticompSRK_PR.f90  ThermoRoutines_RKPR.f90  cubic.f90
pyforfluids/fortran/feos/: interface.f90  pyfeos.f90
pyforfluids/fortran/feos/src/: constants.f90  fluid.f90  mixing_rules.f90  mixture.f90  properties.f90
pyforfluids/fortran/feos/src/cubic/: base.f90  cubic_eos.f90
pyforfluids/models/: __init__.py  core-models.py  core_models.py  cubic.py  gerg2008.py  gerg_wc_plots.py  gerg_wc_warnings.py  residual_helmholtz.py  system.py
pyforfluids/models/cubic/: __init__.py  cubic_eos.py  peng_robinson_76.py
pyforfluids/models/mixingrules/: __init__.py  mixingrules.py
pyforfluids/models/multiparameter/: gerg2008.py
src/: core.py  gerg2008.py  pyforfluids.py
src/fortran/: gerg.f95  parameters.f95  thermoprops.f95
tests/: __init__.py  conftest.py  test_core.py  test_cubic.py  test_flash.py  test_fluid.py  test_fluid_variables.py  test_gerg.py
tests/datasets/: ahmadi2.csv  ahmadi323.3.csv  flash.csv  isotherm.pkl  peng_robinson_mix_pv.csv
tests/equilibrium/: test_flash.py
tests/models/: test_cubic.py  test_gerg2008.py
tests/verification/GERG_test/NG/: test_concentrations
tests/verification/GERG_test/binary/: calcs  deltas.csv  test_data
tests/verification/GERG_test/binary/tester/: status  tester.py  tmp
tests/verification/GERG_test/puretest/: gerg  nist
tests/verification/Z_test/: papers  test_data
tests/verification/w_test/: compare  compare.py  concentrations  gergdata  test_data  tmp_conc
tools/: basic.py  dat  flash.py  flint.py  gpeciso  gpeciso322  interactive.ipynb  plot.py
